# PIGS

client/src/: index.html  index.js  styles.css
client/src/db/: dino-mocks.js
client/src/header/: header.css  header.html  header.js
client/src/login/: login.html  login.js
client/src/pages/expenses/: expenses-home.css  expenses-home.html  expenses-home.js
client/src/pages/pantries/: pantries-home.css  pantries-home.html  pantries.js  pantry-details.html  pantry-details.js
client/src/pages/recipes/: recipes-home.html  recipes.css  recipes.js
client/src/pages/shop/: shopping-home.css  shopping-home.html  shopping-home.js  shopping-map.html  shopping-map.js
server/: CMakeLists.txt  Dockerfile  docker-compose.yml
server/src/: helpers.cpp  helpers.h  main.cpp
server/src/routes/: expenses.cpp  expenses.h  items.cpp  items.h  recipes.cpp  recipes.h  supplies.cpp  supplies.h
src/: index.html  styles.css
src/db/: dino-mocks.js
src/footer/: footer.css  footer.js
src/header/: header.css  header.html  header.js
src/pages/expenses/: expenses-home.html
src/pages/pantries/: pantries-home.css  pantries-home.html  pantries.js  pantry-details.js
src/pages/recipes/: recipes.css
src/pages/shop/: shopping-home.html
